created images folder

--- a/classes.html
+++ b/classes.html
@@ -19,7 +19,7 @@
     </nav>
     <main>
         <div>
-            <img id="yogamat" src="yogamat.jpg" alt="A yoga door" height="400px">  
+            <img id="yogamat" src="images/yogamat.jpg" alt="A yoga door" height="400px">  
         </div>
         <h2>Yoga Classes</h2>
         <dl>
