needs more work

--- a/index.html
+++ b/index.html
@@ -8,39 +8,41 @@
 </head>
 
 <body>
-    <header>
-        <h1>Path of Light Yoga Studio</h1>
-    </header>
-    <nav>
+    <nav class="content">
         <a href="index.html"><b>Home</b></a> &nbsp;
         <a href="classes.html"><b>Classes</b></a> &nbsp;
         <a href="schedule.html"><b>Schedule</b></a> &nbsp;
         <a href="contact.html"><b>Contact</b></a>
     </nav>
-    <main>
-        <img id="yogadoor" src="images/yogadoor.jpg" alt="A yoga door" width="250px" height="275px">
-        <h2>Find Your Inner Light</h2>
-        <p>Path of Light Yoga Studio provides all levels of yoda practice in a
-            tranquil, peaceful enviroment. Whether you are new to yoga or an
-            expierenced practitioner, our deicated instructors can develop a practice
-            to meet your needs. Let your inner light shine at the Path of Light Yoga Studio.
-        </p>
-        <ul>
-            <li>Hatha, Vinyas, and Restorative Yoga classes</li>
-            <li>Drop-ins welcome</li>
-            <li>Mats, blocks, and blankets provided</li>
-            <li>Relax in our Serenity Lounge before or after your class</li>
-        </ul>
-        <div>
-            612 Serenity Way<br>
-            El Dorado, AZ 86336<br>
-            888-555-5555
-        </div><br>
-    </main>
-    <footer>
-        <small><i>Copyright &copy; 2021 Path of Light Yoga Studio</i></small><br>
-        <a href="mailto:cory@fladhammer.com">cory@fladhammer.com</a>
-    </footer>
+    <header class="home">
+        <h1>Path of Light Yoga Studio</h1>
+    </header>
+    <div class="wrapper">
+        <main>
+            <h2>Find Your Inner Light</h2>
+            <p>Path of Light Yoga Studio provides all levels of yoda practice in a
+                tranquil, peaceful enviroment. Whether you are new to yoga or an
+                expierenced practitioner, our deicated instructors can develop a practice
+                to meet your needs. Let your inner light shine at the Path of Light Yoga Studio.
+            </p>
+            <ul>
+                <li>Hatha, Vinyas, and Restorative Yoga classes</li>
+                <li>Drop-ins welcome</li>
+                <li>Mats, blocks, and blankets provided</li>
+                <li>Relax in our Serenity Lounge before or after your class</li>
+            </ul>
+            <div>
+                612 Serenity Way<br>
+                El Dorado, AZ 86336<br>
+                888-555-5555
+            </div><br>
+        </main>
+        <footer>
+            <small><i>Copyright &copy; 2021 Path of Light Yoga Studio</i></small><br>
+            <a href="mailto:cory@fladhammer.com">cory@fladhammer.com</a>
+        </footer>
+    </div>
+
 </body>
 
 </html>
