Revert "created images folder"
This reverts commit d9fbb1714014bb2f28aa6fa4f830701864bf5d94.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <a href="contact.html"><b>Contact</b></a>
     </nav>
     <main>
+        <img id="yogadoor" src="yogadoor.jpg" alt="A yoga door" width="250px" height="275px">
         <h2>Find Your Inner Light</h2>
         <p>Path of Light Yoga Studio provides all levels of yoda practice in a
             tranquil, peaceful enviroment. Whether you are new to yoga or an
