--- a/classes.html
+++ b/classes.html
@@ -15,6 +15,9 @@
         <a href="contact.html"><b>Contact</b></a>
     </nav>
     <main>
+        <div>
+            <img id="yogamat" src="yogamat.jpg" alt="A yoga door" height="400px">  
+        </div>
         <h2>Yoga Classes</h2>
         <dl>
             <dt><strong>Gentle Hatha Yoga</strong></dt>
