Revert "needs more work"
This reverts commit d1ff776687c7f04d1a5101920a3fb1e893b4f342.

--- a/index.html
+++ b/index.html
@@ -8,14 +8,17 @@
 </head>
 
 <body>
-    <nav class="content">
+    <header>
+        <h1>Path of Light Yoga Studio</h1>
+    </header>
+    <nav>
         <a href="index.html"><b>Home</b></a> &nbsp;
         <a href="classes.html"><b>Classes</b></a> &nbsp;
         <a href="schedule.html"><b>Schedule</b></a> &nbsp;
         <a href="contact.html"><b>Contact</b></a>
     </nav>
     <main>
-        <img id="yogadoor" src="yogadoor.jpg" alt="A yoga door" width="250px" height="275px">
+        <img id="yogadoor" src="images/yogadoor.jpg" alt="A yoga door" width="250px" height="275px">
         <h2>Find Your Inner Light</h2>
         <p>Path of Light Yoga Studio provides all levels of yoda practice in a
             tranquil, peaceful enviroment. Whether you are new to yoga or an
