back to chapter 5 complete

--- a/schedule.html
+++ b/schedule.html
@@ -19,7 +19,7 @@
     </nav>
     <main>
         <div>
-            <img id="yogamat" src="yogalounge.jpg" alt="A yoga door" height="400px">  
+            <img src="/images/yogalounge.jpg" height="400px">  
         </div>
         <h2>Yoga Schedule</h2>
         <p>Mats, blocks, and blankets provided. Please arrive 10 minutes
