--- a/schedule.html
+++ b/schedule.html
@@ -8,45 +8,44 @@
 </head>
 
 <body>
-    <header>
-        <h1>Path of Light Yoga Studio</h1>
-    </header>
     <nav>
         <a href="index.html"><b>Home</b></a> &nbsp;
         <a href="classes.html"><b>Classes</b></a> &nbsp;
         <a href="schedule.html"><b>Schedule</b></a> &nbsp;
         <a href="contact.html"><b>Contact</b></a>
     </nav>
-    <main>
-        <div>
-            <img src="/images/yogalounge.jpg" height="400px">  
-        </div>
-        <h2>Yoga Schedule</h2>
-        <p>Mats, blocks, and blankets provided. Please arrive 10 minutes
-            before your class begins. Relax in our Serenity Lounge before 
-            or after your class.
-        </p>
-        <h3>Monday - Friday</h3>
-        <ul>
-            <li>9:00am Gentle Hatha Yoga</li>
-            <li>10:30am Vinyasa Yoga</li>
-            <li>5:30pm Restorative Yoga</li>
-            <li>7:00pm Gentle Hatha Yoga</li>
-        </ul>
-        <h3>Saturday - Sunday</h3>
-        <ul>
-            <li>10:30am Gentle Hatha Yoga</li>
-            <li>Noon Vinyasa Yoga</li>
-            <li>1:30pm Gentle Hatha Yoga</li>
-            <li>3:00pm Vinyasa Yoga</li>
-            <li>5:30pm Restorative Yoga</li>
-        </ul>
-
-    </main>
-    <footer>
-        <small><i>Copyright &copy; 2021 Path of Light Yoga Studio</i></small><br>
-        <a href="mailto:cory@fladhammer.com">cory@fladhammer.com</a>
-    </footer>
+    <header class="content">
+        <h1>Path of Light Yoga Studio</h1>
+    </header>
+    <div id="wrapper">
+        <main>
+            <h2>Yoga Schedule</h2>
+            <p>Mats, blocks, and blankets provided. Please arrive 10 minutes
+                before your class begins. Relax in our Serenity Lounge before
+                or after your class.
+            </p>
+            <h3>Monday - Friday</h3>
+            <ul>
+                <li>9:00am Gentle Hatha Yoga</li>
+                <li>10:30am Vinyasa Yoga</li>
+                <li>5:30pm Restorative Yoga</li>
+                <li>7:00pm Gentle Hatha Yoga</li>
+            </ul>
+            <h3>Saturday - Sunday</h3>
+            <ul>
+                <li>10:30am Gentle Hatha Yoga</li>
+                <li>Noon Vinyasa Yoga</li>
+                <li>1:30pm Gentle Hatha Yoga</li>
+                <li>3:00pm Vinyasa Yoga</li>
+                <li>5:30pm Restorative Yoga</li>
+            </ul>
+            <div id="loungehero"></div>
+        </main>
+        <footer>
+            <small><i>Copyright &copy; 2021 Path of Light Yoga Studio</i></small><br>
+            <a href="mailto:cory@fladhammer.com">cory@fladhammer.com</a>
+        </footer>
+    </div>
 </body>
 
 </html>
