--- a/classes.html
+++ b/classes.html
@@ -9,36 +9,45 @@
 
 <body>
     <nav>
-        <a href="index.html"><b>Home</b></a> &nbsp;
-        <a href="classes.html"><b>Classes</b></a> &nbsp;
-        <a href="schedule.html"><b>Schedule</b></a> &nbsp;
-        <a href="contact.html"><b>Contact</b></a>
+        <ul>
+            <li><a href="index.html">Home</a> </li>
+            <li><a href="classes.html">Classes</a> </li>
+            <li><a href="schedule.html">Schedule</a> </li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
     </nav>
-    <header class="content">
-        <h1>Path of Light Yoga Studio</h1>
+    <header class="home">
+        <h1><a href="index.html">Path of Light Yoga Studio</a></h1>
     </header>
     <div id="wrapper">
         <main>
             <h2>Yoga Classes</h2>
-            <dl>
-                <dt><strong>Gentle Hatha Yoga</strong></dt>
-                <dd>Intended for beginners and anyone wishing a grounded foundation in
+            <section class="onethird">
+                <h3>Gentle Hatha Yoga</h3>
+                <p>
+                    Intended for beginners and anyone wishing a grounded foundation in
                     practice of yoga, this 60 minute class of poses and slow movement focuses
                     on asana (proper alignment and posture), pranayama (breath work), and guided
                     meditaions to foster your mind and body connection.
-                </dd>
-                <dt><strong>Vinyasa Yoga</strong></dt>
-                <dd>Although desinged for intermediate to advanced students, beginners are welcome to
+                </p>
+            </section>
+            <section class="onethird">
+                <h3>Vinyasa Yoga</h3>
+                <p>
+                    Although desinged for intermediate to advanced students, beginners are welcome to
                     sample this 60 minute class that focuses on breath-syncronized movement-you will
-                    inhale and exhale as you flow energetically through yoga poses.
-                </dd>
-                <dt><strong>Restorative Yoga</strong></dt>
-                <dd>This 90 minute class features very slow movement and long poses that are supported
+                    inhale and exhale as you flow energetically through yoga poses. 
+                </p>
+            </section>
+            <section class="onethird">
+                <h3>Restorative Yoga</h3>
+                <p>
+                    This 90 minute class features very slow movement and long poses that are supported
                     by a chair or wall. This calming, restorative expierence is suitable for students
                     of any level of expierence. This practice can be a perfect way to help rehabilitate
                     and injury.
-                </dd><br>
-            </dl>
+                </p>
+            </section>
             <div id="mathero"></div>
         </main>
         <footer>
