--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
 
 <body>
     <nav>
-        <a href="index.html"><b>Home</b></a> &nbsp;
-        <a href="classes.html"><b>Classes</b></a> &nbsp;
-        <a href="schedule.html"><b>Schedule</b></a> &nbsp;
-        <a href="contact.html"><b>Contact</b></a>
+        <ul>
+            <li><a href="index.html">Home</a> </li>
+            <li><a href="classes.html">Classes</a> </li>
+            <li><a href="schedule.html">Schedule</a> </li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
     </nav>
     <header class="home">
-        <h1>Path of Light Yoga Studio</h1>
+        <h1><a href="index.html">Path of Light Yoga Studio</a></h1>
     </header>
     <div id="wrapper">
         <main>
@@ -38,6 +40,7 @@
             </div><br>
         </main>
         <footer>
+            <h3 id="privacy"><a href="privacy.html">Our Privacy Policy</a></h3>
             <small><i>Copyright &copy; 2021 Path of Light Yoga Studio</i></small><br>
             <a href="mailto:cory@fladhammer.com">cory@fladhammer.com</a>
         </footer>
