--- a/schedule.html
+++ b/schedule.html
@@ -9,13 +9,15 @@
 
 <body>
     <nav>
-        <a href="index.html"><b>Home</b></a> &nbsp;
-        <a href="classes.html"><b>Classes</b></a> &nbsp;
-        <a href="schedule.html"><b>Schedule</b></a> &nbsp;
-        <a href="contact.html"><b>Contact</b></a>
+        <ul>
+            <li><a href="index.html">Home</a> </li>
+            <li><a href="classes.html">Classes</a> </li>
+            <li><a href="schedule.html">Schedule</a> </li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
     </nav>
-    <header class="content">
-        <h1>Path of Light Yoga Studio</h1>
+    <header class="home">
+        <h1><a href="index.html">Path of Light Yoga Studio</a></h1>
     </header>
     <div id="wrapper">
         <main>
@@ -24,21 +26,25 @@
                 before your class begins. Relax in our Serenity Lounge before
                 or after your class.
             </p>
-            <h3>Monday - Friday</h3>
-            <ul>
-                <li>9:00am Gentle Hatha Yoga</li>
-                <li>10:30am Vinyasa Yoga</li>
-                <li>5:30pm Restorative Yoga</li>
-                <li>7:00pm Gentle Hatha Yoga</li>
-            </ul>
-            <h3>Saturday - Sunday</h3>
-            <ul>
-                <li>10:30am Gentle Hatha Yoga</li>
-                <li>Noon Vinyasa Yoga</li>
-                <li>1:30pm Gentle Hatha Yoga</li>
-                <li>3:00pm Vinyasa Yoga</li>
-                <li>5:30pm Restorative Yoga</li>
-            </ul>
+            <section class="onehalf">
+                <h3>Monday - Friday</h3>
+                <ul>
+                    <li>9:00am Gentle Hatha Yoga</li>
+                    <li>10:30am Vinyasa Yoga</li>
+                    <li>5:30pm Restorative Yoga</li>
+                    <li>7:00pm Gentle Hatha Yoga</li>
+                </ul>
+            </section>
+            <section class="onehalf">
+                <h3>Saturday - Sunday</h3>
+                <ul>
+                    <li>10:30am Gentle Hatha Yoga</li>
+                    <li>Noon Vinyasa Yoga</li>
+                    <li>1:30pm Gentle Hatha Yoga</li>
+                    <li>3:00pm Vinyasa Yoga</li>
+                    <li>5:30pm Restorative Yoga</li>
+                </ul>
+            </section>
             <div id="loungehero"></div>
         </main>
         <footer>
