--- a/schedule.html
+++ b/schedule.html
@@ -4,6 +4,7 @@
 <head>
     <title>Path of Light Yoga Studio :: Classes</title>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device=width, initial scale=1.0">
     <link rel="stylesheet" href="yoga.css">
 </head>
 
@@ -26,28 +27,31 @@
                 before your class begins. Relax in our Serenity Lounge before
                 or after your class.
             </p>
-            <section class="onehalf">
-                <h3>Monday - Friday</h3>
-                <ul>
-                    <li>9:00am Gentle Hatha Yoga</li>
-                    <li>10:30am Vinyasa Yoga</li>
-                    <li>5:30pm Restorative Yoga</li>
-                    <li>7:00pm Gentle Hatha Yoga</li>
-                </ul>
-            </section>
-            <section class="onehalf">
-                <h3>Saturday - Sunday</h3>
-                <ul>
-                    <li>10:30am Gentle Hatha Yoga</li>
-                    <li>Noon Vinyasa Yoga</li>
-                    <li>1:30pm Gentle Hatha Yoga</li>
-                    <li>3:00pm Vinyasa Yoga</li>
-                    <li>5:30pm Restorative Yoga</li>
-                </ul>
-            </section>
+            <div id="flow">
+                <section>
+                    <h3>Monday - Friday</h3>
+                    <ul>
+                        <li>9:00am Gentle Hatha Yoga</li>
+                        <li>10:30am Vinyasa Yoga</li>
+                        <li>5:30pm Restorative Yoga</li>
+                        <li>7:00pm Gentle Hatha Yoga</li>
+                    </ul>
+                </section>
+                <section>
+                    <h3>Saturday - Sunday</h3>
+                    <ul>
+                        <li>10:30am Gentle Hatha Yoga</li>
+                        <li>Noon Vinyasa Yoga</li>
+                        <li>1:30pm Gentle Hatha Yoga</li>
+                        <li>3:00pm Vinyasa Yoga</li>
+                        <li>5:30pm Restorative Yoga</li>
+                    </ul>
+                </section>
+            </div>
             <div id="loungehero"></div>
         </main>
         <footer>
+            <h3 id="privacy"><a href="privacy.html">Our Privacy Policy</a></h3>
             <small><i>Copyright &copy; 2021 Path of Light Yoga Studio</i></small><br>
             <a href="mailto:cory@fladhammer.com">cory@fladhammer.com</a>
         </footer>
