--- a/classes.html
+++ b/classes.html
@@ -4,6 +4,7 @@
 <head>
     <title>Path of Light Yoga Studio :: Classes</title>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device=width, initial scale=1.0">
     <link rel="stylesheet" href="yoga.css">
 </head>
 
@@ -22,35 +23,39 @@
     <div id="wrapper">
         <main>
             <h2>Yoga Classes</h2>
-            <section class="onethird">
-                <h3>Gentle Hatha Yoga</h3>
-                <p>
-                    Intended for beginners and anyone wishing a grounded foundation in
-                    practice of yoga, this 60 minute class of poses and slow movement focuses
-                    on asana (proper alignment and posture), pranayama (breath work), and guided
-                    meditaions to foster your mind and body connection.
-                </p>
-            </section>
-            <section class="onethird">
-                <h3>Vinyasa Yoga</h3>
-                <p>
-                    Although desinged for intermediate to advanced students, beginners are welcome to
-                    sample this 60 minute class that focuses on breath-syncronized movement-you will
-                    inhale and exhale as you flow energetically through yoga poses. 
-                </p>
-            </section>
-            <section class="onethird">
-                <h3>Restorative Yoga</h3>
-                <p>
-                    This 90 minute class features very slow movement and long poses that are supported
-                    by a chair or wall. This calming, restorative expierence is suitable for students
-                    of any level of expierence. This practice can be a perfect way to help rehabilitate
-                    and injury.
-                </p>
-            </section>
+            <div id="flow">
+                <section>
+                    <h3>Gentle Hatha Yoga</h3>
+                    <p>
+                        Intended for beginners and anyone wishing a grounded foundation in
+                        practice of yoga, this 60 minute class of poses and slow movement focuses
+                        on asana (proper alignment and posture), pranayama (breath work), and guided
+                        meditaions to foster your mind and body connection.
+                    </p>
+                </section>
+                <section>
+                    <h3>Vinyasa Yoga</h3>
+                    <p>
+                        Although desinged for intermediate to advanced students, beginners are welcome to
+                        sample this 60 minute class that focuses on breath-syncronized movement-you will
+                        inhale and exhale as you flow energetically through yoga poses. 
+                    </p>
+                </section>
+                <section>
+                    <h3>Restorative Yoga</h3>
+                    <p>
+                        This 90 minute class features very slow movement and long poses that are supported
+                        by a chair or wall. This calming, restorative expierence is suitable for students
+                        of any level of expierence. This practice can be a perfect way to help rehabilitate
+                        and injury.
+                    </p>
+                </section>
+            </div>
+
             <div id="mathero"></div>
         </main>
         <footer>
+            <h3 id="privacy"><a href="privacy.html">Our Privacy Policy</a></h3>
             <small><i>Copyright &copy; 2021 Path of Light Yoga Studio</i></small><br>
             <a href="mailto:cory@fladhammer.com">cory@fladhammer.com</a>
         </footer>
