--- a/schedule.html
+++ b/schedule.html
@@ -29,23 +29,62 @@
             </p>
             <div id="flow">
                 <section>
-                    <h3>Monday - Friday</h3>
-                    <ul>
-                        <li>9:00am Gentle Hatha Yoga</li>
-                        <li>10:30am Vinyasa Yoga</li>
-                        <li>5:30pm Restorative Yoga</li>
-                        <li>7:00pm Gentle Hatha Yoga</li>
-                    </ul>
+                    <table>
+                        <caption>Monday - Friday</caption>
+                        <thead>
+                            <th>Time</th>
+                            <th>Class</th>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>9:00am </td>
+                                <td>Gentle Hatha Yoga</td>
+                            </tr>
+                            <tr>
+                                <td>10:30am</td>
+                                <td>Vinyasa Yoga</td>
+                            </tr>
+                            <tr>
+                                <td>5:30pm</td>
+                                <td>Restorative Yoga</td>
+                            </tr>
+                            <tr>
+                                <td>7:00pm</td>
+                                <td>Gentle Hatha Yoga</td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </section>
                 <section>
-                    <h3>Saturday - Sunday</h3>
-                    <ul>
-                        <li>10:30am Gentle Hatha Yoga</li>
-                        <li>Noon Vinyasa Yoga</li>
-                        <li>1:30pm Gentle Hatha Yoga</li>
-                        <li>3:00pm Vinyasa Yoga</li>
-                        <li>5:30pm Restorative Yoga</li>
-                    </ul>
+                    <table>
+                        <caption>Saturday - Sunday</caption>
+                        <thead>
+                            <th id="time">Time</th>
+                            <th id="class">Class</th>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td headers="time">10:30am </td>
+                                <td headers="class">Gentle Hatha Yoga</td>
+                            </tr>
+                            <tr>
+                                <td headers="time">Noon</td>
+                                <td headers="class">Vinyasa Yoga</td>
+                            </tr>
+                            <tr>
+                                <td headers="time">1:30pm</td>
+                                <td headers="class">Gentle Hatha Yoga</td>
+                            </tr>
+                            <tr>
+                                <td headers="time">3:00pm</td>
+                                <td headers="class">Vinyasa Yoga</td>
+                            </tr>
+                            <tr>
+                                <td headers="time">5:30pm</td>
+                                <td headers="class">Restorative Yoga</td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </section>
             </div>
             <div id="loungehero"></div>
