--- a/classes.html
+++ b/classes.html
@@ -51,7 +51,20 @@
                     </p>
                 </section>
             </div>
+            <h2>Relax Anytime with Savasana</h2>
+            <p>
+                Prepare yourself for savasana. Lie down on your youga mat with your arms at your side with
+                palms up. Close your eyes and breathe slowly but deeply. Sink into the mat and let your worries 
+                slip away. When you rae ready, roll on your side and use your arms to push yourself to a sitting 
+                position with crossed legs. Place your hands in a prayer postion. Be grateful for all that your 
+                have in life. Namaste.
 
+            </p>
+            <audio controls="controls">
+                <source src="media/savasana.mp3" type="audio/mpeg">
+                <source src="/media/savasana.ogg" type="audio/ogg">
+            </audio>
+            <a class="savasana" href="/media/savasana.mp3">Download Savasana</a>
             <div id="mathero"></div>
         </main>
         <footer>
