--- a/classes.html
+++ b/classes.html
@@ -4,6 +4,8 @@
 <head>
     <title>Path of Light Yoga Studio :: Classes</title>
     <meta charset="utf-8">
+    <meta name="description" content="Are you looking to find a new Yoga studio for? Check out Path of 
+    Light Yoga to see if we fit your Yoga needs.">
     <meta name="viewport" content="width=device=width, initial scale=1.0">
     <link rel="stylesheet" href="yoga.css">
 </head>
@@ -58,7 +60,6 @@
                 slip away. When you rae ready, roll on your side and use your arms to push yourself to a sitting 
                 position with crossed legs. Place your hands in a prayer postion. Be grateful for all that your 
                 have in life. Namaste.
-
             </p>
             <audio controls="controls">
                 <source src="media/savasana.mp3" type="audio/mpeg">
