--- a/schedule.html
+++ b/schedule.html
@@ -5,6 +5,8 @@
     <title>Path of Light Yoga Studio :: Classes</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device=width, initial scale=1.0">
+    <meta name="description" content="Are you looking to find a new Yoga studio for? Check out Path of 
+    Light Yoga to see if we fit your Yoga needs.">
     <link rel="stylesheet" href="yoga.css">
 </head>
 
